--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -4,9 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>CV – Prácticas FCT DAW</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,18 +13,15 @@
 
   <div class="info-field">
     <h1>Claudia</h1>
-    <h2>RODRÍGUEZ MAYÁN</h2> 
-    <p class="role">Estudiante de Desarrollo de Aplicaciones Web — Busco prácticas FCT</p>
-    <p class="tiny">Disponibilidad inmediata · Santiago de Compostela · Presencial/Híbrido/Remoto</p>
+    <h2 class="surname">RODRÍGUEZ MAYÁN</h2> 
+    <p class="role">Estudiante de Desarrollo de Aplicaciones Web </p>
+    <p class="tiny">Disponibilidad inmediata · Presencial/Híbrido/Remoto</p>
+    <p class="tiny">◆ Santiago de Compostela</p>
+    <br>
+    <p class="role right-align"><strong>— Busco prácticas FCT</strong></p>
   </div>
 
-  <div class="contact">
-    <ul>
-      <li>📧 claudia.rmayán@gmail.com</li>
-      <li>📱 +34 651 310 998</li>
-      <li>🇪🇸 España · 📍 Santiago de Compostela</li>
-    </ul>
-  </div>
+  
 </header>
 
 
