terminada la cabecera

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>CV – Prácticas FCT DAW</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 <div class="page">
@@ -12,17 +13,27 @@
   <img class="avatar" src="img/foto.png" alt="Foto">
 
   <div class="info-field">
-    <h1>Claudia</h1>
+    <div class="header-top">
+      <h1>Claudia</h1>
+    </div>
+    
     <h2 class="surname">RODRÍGUEZ MAYÁN</h2> 
     <p class="role">Estudiante de Desarrollo de Aplicaciones Web </p>
-    <p class="tiny">Disponibilidad inmediata · Presencial/Híbrido/Remoto</p>
-    <p class="tiny">◆ Santiago de Compostela</p>
+    <p class="tiny tiny-spacing">Disponibilidad inmediata · Presencial/Híbrido/Remoto</p>
+    <p class="tiny"><i class="material-icons tiny-icon">location_on</i>Santiago de Compostela</p>
     <br>
     <p class="role right-align"><strong>— Busco prácticas FCT</strong></p>
   </div>
 
   
 </header>
+
+<div class="contact-top">
+  <p><i class="material-icons">github</i>GitHub</p>
+  <p><i class="material-icons">work</i>LinkedIn</p>
+  <p><i class="material-icons">email</i>claudia.rmayan@gmail.com</p>
+  <p><i class="material-icons">phone</i>+34 651 310 998</p>
+</div>
 
 
   <div class="grid">
