Revert: back to working version with icon styling

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -29,10 +29,30 @@
 </header>
 
 <div class="contact-top">
-  <p><i class="material-icons">github</i>GitHub</p>
-  <p><i class="material-icons">work</i>LinkedIn</p>
-  <p><i class="material-icons">email</i>claudia.rmayan@gmail.com</p>
-  <p><i class="material-icons">phone</i>+34 651 310 998</p>
+  <div class="contact-item">
+    <a href="https://github.com/ElCayi" target="_blank">
+      <i class="material-icons">github</i>
+      <span>GitHub</span>
+    </a>
+  </div>
+  <div class="contact-item">
+    <a href="https://www.linkedin.com/in/cayi/" target="_blank">
+      <i class="material-icons">work</i>
+      <span>LinkedIn</span>
+    </a>
+  </div>
+  <div class="contact-item">
+    <a href="mailto:claudia.rmayan@gmail.com">
+      <i class="material-icons">email</i>
+      <span>claudia.rmayan@gmail.com</span>
+    </a>
+  </div>
+  <div class="contact-item">
+    <a href="tel:+34651310998">
+      <i class="material-icons">phone</i>
+      <span>+34 651 310 998</span>
+    </a>
+  </div>
 </div>
 
 
