terminado bloque contactos. Ahora están arriba en el margen derecho

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -38,13 +38,13 @@
   <div class="contact-item">
     <a href="https://www.linkedin.com/in/cayi/" target="_blank">
       <i class="material-icons">work</i>
-      <span>LinkedIn</span>
+      <span>&nbsp;&nbsp;&nbsp;LinkedIn</span>
     </a>
   </div>
   <div class="contact-item">
     <a href="tel:+34651310998">
       <i class="material-icons">phone</i>
-      <span>+34 651 310 998</span>
+      <span>&nbsp;+34 651 310 998</span>
     </a>
   </div>
   <div class="contact-item">
