CV refinements: reorganized technologies section with categories, compressed spacing, adjusted margins

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -13,14 +13,12 @@
   <img class="avatar" src="img/foto.png" alt="Foto">
 
   <div class="info-field">
-    <div class="header-top">
       <h1>Claudia</h1>
-    </div>
     
     <h2 class="surname">RODRÍGUEZ MAYÁN</h2> 
     <p class="role">Estudiante de Desarrollo de Aplicaciones Web </p>
     <p class="tiny tiny-spacing">Disponibilidad inmediata · Presencial/Híbrido/Remoto</p>
-    <p class="tiny"><i class="material-icons tiny-icon">location_on</i>Santiago de Compostela</p>
+    <p class="tiny"><i class="material-icons tiny-icon">location_on</i>Santiago de Compostela, Galicia</p>
     <br>
     <p class="role right-align"><strong>— Busco prácticas FCT</strong></p>
   </div>
@@ -38,13 +36,13 @@
   <div class="contact-item">
     <a href="https://www.linkedin.com/in/cayi/" target="_blank">
       <i class="material-icons">work</i>
-      <span>&nbsp;&nbsp;&nbsp;LinkedIn</span>
+      <span>LinkedIn</span>
     </a>
   </div>
   <div class="contact-item">
     <a href="tel:+34651310998">
       <i class="material-icons">phone</i>
-      <span>&nbsp;+34 651 310 998</span>
+      <span>+34 651 310 998</span>
     </a>
   </div>
   <div class="contact-item">
@@ -59,11 +57,14 @@
   <div class="grid">
     <main>
       <section>
-        <h2>Perfil</h2>
+        <h2></h2>
         <div class="summary">
-          Persona resolutiva y creativa con base sólida en frontend y fundamentos de backend.
-          Busco aplicar mis conocimientos en un entorno profesional, aprender buenas prácticas y aportar energía y organización al equipo.
-        </div>
+          <strong>R</strong>esolutiva y curiosa, con base en frontend (HTML, CSS, 
+          JavaScript) y fundamentos de backend (Java, SQL). Destaco por mi autonomía 
+          y enfoque analítico al aprender, y por integrar IA y automatización en mi flujo de trabajo. Desde asistentes de código 
+          (Copilot, ChatGPT) hasta plataformas de búsqueda inteligente y generación creativa. 
+          Interesada en seguir desarrollándome en entornos modernos con Docker, flujos de trabajo 
+          colaborativos y buenas prácticas de desarrollo.
       </section>
 
       <section>
@@ -110,9 +111,48 @@
       <section>
         <h2>Tecnologías</h2>
         <div class="skills">
-          <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
-          <span class="badge">Java</span><span class="badge">SQL</span><span class="badge">Git / GitHub</span>
-          <span class="badge">Figma</span><span class="badge">Photoshop</span>
+          <div class="skills-group">
+            <div class="group-label">Frontend</div>
+            <div class="group-content">
+              <span class="badge">HTML</span>
+              <span class="badge">CSS</span>
+              <span class="badge">JavaScript</span>
+              <span class="badge">Figma</span>
+            </div>
+          </div>
+          <div class="skills-group">
+            <div class="group-label">Backend</div>
+            <div class="group-content">
+              <span class="badge">Java</span>
+              <span class="badge">Python</span>
+              <span class="badge">SQL</span>
+              <span class="badge">MongoDB</span>
+            </div>
+          </div>
+          <div class="skills-group">
+            <div class="group-label">Herramientas</div>
+            <div class="group-content">
+              <span class="badge">Git/GitHub</span>
+              <span class="badge">VS Code</span>
+              <span class="badge">Docker</span>
+            </div>
+          </div>
+          <div class="skills-group">
+            <div class="group-label">Arte digital</div>
+            <div class="group-content">
+              <span class="badge">Photoshop</span>
+              <span class="badge">Illustrator</span>
+            </div>
+          </div>
+          <div class="skills-group">
+            <div class="group-label">Extra</div>
+            <div class="group-content">
+              <span class="badge">APIs</span>
+              <span class="badge">QuantConnect</span>
+              <span class="badge">TradingView</span>
+              <span class="badge">Autodidacta</span>
+            </div>
+          </div>
         </div>
       </section>
 
