Ajustes de espaciado y barra decorativa bajo Rodriguez Mayan

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -68,120 +68,98 @@
       </section>
 
       <section>
-        <h2>Proyectos (selección)</h2>
-        <div class="proj">
-          <div class="item">
-            <div class="when">2025</div>
-            <div>
-              <strong>App To-Do DAW</strong> — HTML, CSS, JS.  
-              <span class="tiny">Gestión de tareas con almacenamiento local y filtros.</span><br>
-              <a href="https://tusitio.example">Demo</a> · <a href="https://github.com/tuusuario/proyecto">Código</a>
-            </div>
-          </div>
-          <div class="item">
-            <div class="when">2025</div>
-            <div>
-              <strong>API básica Java + SQL</strong> — CRUD de usuarios con validación.  
-              <a href="#">Código</a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <h2>Experiencia relevante</h2>
+        <h2>Idiomas</h2>
         <ul class="clean">
-          <li class="item">
-            <div class="when">2017–actual</div>
-            <div><strong>Diseño digital e ilustración (freelance)</strong> — Edición de imagen (Adobe).  
-              <span class="tiny">Transferible a UI, recursos gráficos y comunicación visual.</span>
-            </div>
-          </li>
-          <li class="item">
-            <div class="when">2019–2022</div>
-            <div><strong>Animación y publicidad (eventos)</strong> — Organización y trato con público.  
-              <span class="tiny">Trabajo en equipo, responsabilidad y resolución en directo.</span>
-            </div>
-          </li>
+          <li>Gallego — Nativo</li>
+          <li>Español — Nativo</li>
+          <li>Inglés — Intermedio</li>
         </ul>
       </section>
     </main>
 
     <aside>
       <section>
-        <h2>Tecnologías</h2>
-        <div class="skills">
-          <div class="skills-group">
-            <div class="group-label">Frontend</div>
-            <div class="group-content">
-              <span class="badge">HTML</span>
-              <span class="badge">CSS</span>
-              <span class="badge">JavaScript</span>
-              <span class="badge">Figma</span>
-            </div>
-          </div>
-          <div class="skills-group">
-            <div class="group-label">Backend</div>
-            <div class="group-content">
-              <span class="badge">Java</span>
-              <span class="badge">Python</span>
-              <span class="badge">SQL</span>
-              <span class="badge">MongoDB</span>
-            </div>
-          </div>
-          <div class="skills-group">
-            <div class="group-label">Herramientas</div>
-            <div class="group-content">
-              <span class="badge">Git/GitHub</span>
-              <span class="badge">VS Code</span>
-              <span class="badge">Docker</span>
-            </div>
-          </div>
-          <div class="skills-group">
-            <div class="group-label">Arte digital</div>
-            <div class="group-content">
-              <span class="badge">Photoshop</span>
-              <span class="badge">Illustrator</span>
-            </div>
-          </div>
-          <div class="skills-group">
-            <div class="group-label">Extra</div>
-            <div class="group-content">
-              <span class="badge">APIs</span>
-              <span class="badge">QuantConnect</span>
-              <span class="badge">TradingView</span>
-              <span class="badge">Autodidacta</span>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section>
         <h2>Formación</h2>
         <div class="item">
           <div class="when">2025</div>
-          <div><strong>CFGS Desarrollo de Aplicaciones Web</strong> — UNIR FP (en curso)</div>
+          <div><strong>CFGS Desarrollo de Aplicaciones Web</strong> — UNIR FP </div>
         </div>
         <div class="item">
-          <div class="when">—</div>
+          <div class="when">2024</div>
+          <div><strong>Introducción al Desarrollo de Videojuegos</strong> — INCYDE</div>
+        </div>
+        <div class="item">
+          <div class="when">2023</div>
+          <div><strong>Digital Painting in Photoshop</strong> — Aaron Blaise</div>
+        </div>
+        <div class="item">
+          <div class="when">2014</div>
           <div>Bachillerato · CELGA 4</div>
         </div>
       </section>
 
       <section>
-        <h2>Hitos/Logros</h2>
-        <ul>
-          <li>Entrega puntual y ordenada de trabajos (mención docente).</li>
-          <li>Participación activa en equipos y eventos.</li>
-        </ul>
+        <h2>Tecnologías</h2>
+        <div class="skills skills-two-columns">
+          <div class="skills-column">
+            <div class="skills-group">
+              <div class="group-label">Frontend</div>
+              <div class="group-content">
+                <span class="badge">HTML</span>
+                <span class="badge">CSS</span>
+                <span class="badge">JavaScript</span>
+                <span class="badge">Figma</span>
+              </div>
+            </div>
+            <div class="skills-group">
+              <div class="group-label">Herramientas</div>
+              <div class="group-content">
+                <span class="badge">Git/GitHub</span>
+                <span class="badge">VS Code</span>
+                <span class="badge">Docker</span>
+              </div>
+            </div>
+          </div>
+          <div class="skills-column">
+            <div class="skills-group">
+              <div class="group-label">Backend</div>
+              <div class="group-content">
+                <span class="badge">Java</span>
+                <span class="badge">Python</span>
+                <span class="badge">SQL</span>
+                <span class="badge">MongoDB</span>
+              </div>
+            </div>
+            <div class="skills-group">
+              <div class="group-label">Arte digital</div>
+              <div class="group-content">
+                <span class="badge">Photoshop</span>
+                <span class="badge">Illustrator</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section>
-        <h2>Idiomas</h2>
-        <ul>
-          <li>Gallego — Nativo</li>
-          <li>Español — Nativo</li>
-          <li>Inglés — Intermedio</li>
+        <h2>Experiencia</h2>
+        <ul class="clean">
+          <li class="item">
+            <div class="when">2025</div>
+            <div><strong>App To-Do DAW</strong> — HTML, CSS, JS. Gestión de tareas con almacenamiento local y filtros.</div>
+          </li>
+          <li class="item">
+            <div class="when">2025</div>
+            <div><strong>API básica Java + SQL</strong> — CRUD de usuarios con validación.</div>
+          </li>
+          <li class="item">
+            <div class="when">2017–actual</div>
+            <div><strong>Diseño digital e ilustración (freelance)</strong> — Edición de imagen (Adobe). UI, recursos gráficos y comunicación visual.</div>
+          </li>
+          <li class="item">
+            <div class="when">2019–2022</div>
+            <div><strong>Animación y publicidad (eventos)</strong> — Organización y trato con público.</div>
+          </li>
         </ul>
       </section>
     </aside>
