Refinamiento del bloque de tecnologías: reorganizar secciones, añadir chips, mejorar hover y espaciado

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -59,21 +59,66 @@
       <section>
         <h2></h2>
         <div class="summary">
-          <strong>R</strong>esolutiva y curiosa, con base en frontend (HTML, CSS, 
-          JavaScript) y fundamentos de backend (Java, SQL). Destaco por mi autonomía 
-          y enfoque analítico al aprender, y por integrar IA y automatización en mi flujo de trabajo. Desde asistentes de código 
-          (Copilot, ChatGPT) hasta plataformas de búsqueda inteligente y generación creativa. 
-          Interesada en seguir desarrollándome en entornos modernos con Docker, flujos de trabajo 
-          colaborativos y buenas prácticas de desarrollo.
+          <strong>R</strong>esolutiva y curiosa, con base en frontend (HTML, CSS, JavaScript) 
+          y fundamentos de backend (Java, SQL). Me destaco por mi autonomía, enfoque analítico 
+          y por integrar IA y automatización en mi trabajo, usando herramientas como Copilot y ChatGPT. 
+          Interesada en entornos modernos con Docker y buenas prácticas de desarrollo.
       </section>
 
       <section>
-        <h2>Idiomas</h2>
-        <ul class="clean">
-          <li>Gallego — Nativo</li>
-          <li>Español — Nativo</li>
-          <li>Inglés — Intermedio</li>
-        </ul>
+        <div class="skills skills-two-columns">
+          <div class="skills-column">
+            <div class="skills-group">
+              <div class="group-label">Frontend</div>
+              <div class="group-content">
+                <span class="badge">HTML</span>
+                <span class="badge">CSS</span>
+                <span class="badge">JavaScript</span>
+                <span class="badge">Angular</span>
+                <span class="badge">Figma</span>
+              </div>
+            </div>
+            <div class="skills-group">
+              <div class="group-label">Backend</div>
+              <div class="group-content">
+                <span class="badge">Java</span>
+                <span class="badge">Spring Boot</span>
+                <span class="badge">Python</span>
+                <span class="badge">SQL</span>
+                <span class="badge">Node.js</span>
+                <span class="badge">MongoDB</span>
+              </div>
+            </div>
+          </div>
+          <div class="skills-column">
+            <div class="skills-group">
+              <div class="group-label">Herramientas</div>
+              <div class="group-content">
+                <span class="badge">Git/GitHub</span>
+                <span class="badge">VS Code</span>
+                <span class="badge">Apache</span>
+                <span class="badge">Linux</span>
+                <span class="badge">Docker</span>
+              </div>
+            </div>
+            <div class="skills-group">
+              <div class="group-label">Arte digital</div>
+              <div class="group-content">
+                <span class="badge">Photoshop</span>
+                <span class="badge">Illustrator</span>
+              </div>
+            </div>
+            <div class="skills-group">
+              <div class="group-label">Extra</div>
+              <div class="group-content">
+                <span class="badge">Spring Security</span>
+                <span class="badge">QuantConnect</span>
+                <span class="badge">TradingView</span>
+                <span class="badge">APIs</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -99,49 +144,6 @@
       </section>
 
       <section>
-        <h2>Tecnologías</h2>
-        <div class="skills skills-two-columns">
-          <div class="skills-column">
-            <div class="skills-group">
-              <div class="group-label">Frontend</div>
-              <div class="group-content">
-                <span class="badge">HTML</span>
-                <span class="badge">CSS</span>
-                <span class="badge">JavaScript</span>
-                <span class="badge">Figma</span>
-              </div>
-            </div>
-            <div class="skills-group">
-              <div class="group-label">Herramientas</div>
-              <div class="group-content">
-                <span class="badge">Git/GitHub</span>
-                <span class="badge">VS Code</span>
-                <span class="badge">Docker</span>
-              </div>
-            </div>
-          </div>
-          <div class="skills-column">
-            <div class="skills-group">
-              <div class="group-label">Backend</div>
-              <div class="group-content">
-                <span class="badge">Java</span>
-                <span class="badge">Python</span>
-                <span class="badge">SQL</span>
-                <span class="badge">MongoDB</span>
-              </div>
-            </div>
-            <div class="skills-group">
-              <div class="group-label">Arte digital</div>
-              <div class="group-content">
-                <span class="badge">Photoshop</span>
-                <span class="badge">Illustrator</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section>
         <h2>Experiencia</h2>
         <ul class="clean">
           <li class="item">
@@ -160,6 +162,15 @@
             <div class="when">2019–2022</div>
             <div><strong>Animación y publicidad (eventos)</strong> — Organización y trato con público.</div>
           </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Idiomas</h2>
+        <ul class="clean">
+          <li>Gallego — Nativo</li>
+          <li>Español — Nativo</li>
+          <li>Inglés — Intermedio</li>
         </ul>
       </section>
     </aside>
