Rediseño completo de sección de Tecnologías: reorganización de chips, cambio a gris oscuro, badges justificados, y reordenamiento de contenido

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -66,56 +66,43 @@
       </section>
 
       <section>
-        <div class="skills skills-two-columns">
-          <div class="skills-column">
-            <div class="skills-group">
-              <div class="group-label">Frontend</div>
-              <div class="group-content">
-                <span class="badge">HTML</span>
-                <span class="badge">CSS</span>
-                <span class="badge">JavaScript</span>
-                <span class="badge">Angular</span>
-                <span class="badge">Figma</span>
-              </div>
-            </div>
-            <div class="skills-group">
-              <div class="group-label">Backend</div>
-              <div class="group-content">
-                <span class="badge">Java</span>
-                <span class="badge">Spring Boot</span>
-                <span class="badge">Python</span>
-                <span class="badge">SQL</span>
-                <span class="badge">Node.js</span>
-                <span class="badge">MongoDB</span>
-              </div>
+        <div class="skills">
+          <div class="skills-group">
+            <div class="group-label">Tecnologías</div>
+            <div class="group-content">
+              <span class="badge">HTML</span>
+              <span class="badge">CSS</span>
+              <span class="badge">JavaScript</span>
+              <span class="badge">Figma</span>
+              <span class="badge">Figma</span>
+              <span class="badge">Java</span>
+              <span class="badge">Python</span>
+              <span class="badge">MongoDB</span>
+              <span class="badge">Git/GitHub</span>
+              <span class="badge">Spring Boot</span>
+              <span class="badge">Node.js</span>
+              <span class="badge">SQL</span>
+              <span class="badge">VS Code</span>
+              <span class="badge">Docker</span>
+              <span class="badge">Apache</span>
+              <span class="badge">Linux</span>
             </div>
           </div>
-          <div class="skills-column">
-            <div class="skills-group">
-              <div class="group-label">Herramientas</div>
-              <div class="group-content">
-                <span class="badge">Git/GitHub</span>
-                <span class="badge">VS Code</span>
-                <span class="badge">Apache</span>
-                <span class="badge">Linux</span>
-                <span class="badge">Docker</span>
-              </div>
+          <div class="skills-group">
+            <div class="group-label">Extra</div>
+            <div class="group-content">
+              <span class="badge">APIs REST</span>
+              <span class="badge">TradingView</span>
+              <span class="badge">Adobe</span>
+              <span class="badge">QuantConnect</span>
             </div>
-            <div class="skills-group">
-              <div class="group-label">Arte digital</div>
-              <div class="group-content">
-                <span class="badge">Photoshop</span>
-                <span class="badge">Illustrator</span>
-              </div>
-            </div>
-            <div class="skills-group">
-              <div class="group-label">Extra</div>
-              <div class="group-content">
-                <span class="badge">Spring Security</span>
-                <span class="badge">QuantConnect</span>
-                <span class="badge">TradingView</span>
-                <span class="badge">APIs</span>
-              </div>
+          </div>
+          <div class="skills-group">
+            <div class="group-label">Idiomas</div>
+            <div class="group-content">
+              <span class="badge">Galego (Nativo)</span>
+              <span class="badge">Español (Nativo)</span>
+              <span class="badge">Inglés (B1–B2)</span>
             </div>
           </div>
         </div>
@@ -162,15 +149,6 @@
             <div class="when">2019–2022</div>
             <div><strong>Animación y publicidad (eventos)</strong> — Organización y trato con público.</div>
           </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Idiomas</h2>
-        <ul class="clean">
-          <li>Gallego — Nativo</li>
-          <li>Español — Nativo</li>
-          <li>Inglés — Intermedio</li>
         </ul>
       </section>
     </aside>
