Subsección Extra con estilo mejorado: línea lateral, badges compactos, spacing optimizado

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -73,7 +73,9 @@
               <span class="badge">HTML</span>
               <span class="badge">CSS</span>
               <span class="badge">JavaScript</span>
-              <span class="badge">Figma</span>
+              <span class="badge">Angular
+
+              </span>
               <span class="badge">Figma</span>
               <span class="badge">Java</span>
               <span class="badge">Python</span>
@@ -88,8 +90,8 @@
               <span class="badge">Linux</span>
             </div>
           </div>
-          <div class="skills-group">
-            <div class="group-label">Extra</div>
+          <div class="skills-group subsection">
+            <div class="group-label">Extra:</div>
             <div class="group-content">
               <span class="badge">APIs REST</span>
               <span class="badge">TradingView</span>
@@ -99,10 +101,8 @@
           </div>
           <div class="skills-group">
             <div class="group-label">Idiomas</div>
-            <div class="group-content">
-              <span class="badge">Galego (Nativo)</span>
-              <span class="badge">Español (Nativo)</span>
-              <span class="badge">Inglés (B1–B2)</span>
+            <div class="languages-text">
+              <p>Galego (Nativo) · Español (Nativo) · Inglés (B1)</p>
             </div>
           </div>
         </div>
