--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -72,22 +72,25 @@
             <div class="group-content">
               <span class="badge">HTML</span>
               <span class="badge">CSS</span>
-              <span class="badge">JavaScript</span>
+              <span class="badge">Linux</span>
               <span class="badge">Angular
 
               </span>
               <span class="badge">Figma</span>
               <span class="badge">Java</span>
               <span class="badge">Python</span>
-              <span class="badge">MongoDB</span>
-              <span class="badge">Git/GitHub</span>
-              <span class="badge">Spring Boot</span>
-              <span class="badge">Node.js</span>
               <span class="badge">SQL</span>
-              <span class="badge">VS Code</span>
-              <span class="badge">Docker</span>
+              <span class="badge">MongoDB</span>
               <span class="badge">Apache</span>
+              <span class="badge">VS Code</span>
+              <span class="badge">JavaScript</span>
               <span class="badge">Linux</span>
+              <span class="badge">Git/GitHub</span>
+              <span class="badge">Docker</span>
+              <span class="badge">Node.js</span>
+              <span class="badge">Spring Boot</span>
+              
+              
             </div>
           </div>
           <div class="skills-group subsection">
@@ -102,7 +105,7 @@
           <div class="skills-group">
             <div class="group-label">Idiomas</div>
             <div class="languages-text">
-              <p>Galego (Nativo) · Español (Nativo) · Inglés (B1)</p>
+              <p>Galego (Nativo) · Español (Nativo) </p><p>Inglés (B1)</p>
             </div>
           </div>
         </div>
