Ajustes finales: reduce padding Extra, añade margin-top a Idiomas para mejor espaciado

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -59,10 +59,10 @@
       <section>
         <h2></h2>
         <div class="summary">
-          <strong>R</strong>esolutiva y curiosa, con base en frontend (HTML, CSS, JavaScript) 
-          y fundamentos de backend (Java, SQL). Me destaco por mi autonomía, enfoque analítico 
-          y por integrar IA y automatización en mi trabajo, usando herramientas como Copilot y ChatGPT. 
-          Interesada en entornos modernos con Docker y buenas prácticas de desarrollo.
+          <strong>R</strong>esolutiva y curiosa, con base en frontend 
+          y fundamentos de backend. Me destaco por mi autonomía, enfoque analítico 
+          y por integrar IA y automatización en mi trabajo, usando herramientas como Copilot. 
+          Interesada en entornos modernos y buenas prácticas de desarrollo.
       </section>
 
       <section>
