Cambios finales: reorganización Experiencia en columna, contenido actualizado, márgenes ajustados, y diseño pulido

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -137,27 +137,27 @@
         <h2>Experiencia</h2>
         <ul class="clean">
           <li class="item">
-            <div class="when">2025</div>
-            <div><strong>App To-Do DAW</strong> — HTML, CSS, JS. Gestión de tareas con almacenamiento local y filtros.</div>
-          </li>
-          <li class="item">
-            <div class="when">2025</div>
-            <div><strong>API básica Java + SQL</strong> — CRUD de usuarios con validación.</div>
-          </li>
-          <li class="item">
             <div class="when">2017–actual</div>
-            <div><strong>Diseño digital e ilustración (freelance)</strong> — Edición de imagen (Adobe). UI, recursos gráficos y comunicación visual.</div>
+            <div><strong>Freelance / Proyectos personales</strong> — Diseño y programación de sistemas algorítmicos de trading, integración de APIs (QuantConnect, TradingView) y automatización de flujos financieros.</div>
           </li>
           <li class="item">
-            <div class="when">2019–2022</div>
-            <div><strong>Animación y publicidad (eventos)</strong> — Organización y trato con público.</div>
+            <div class="when">2020–2022</div>
+            <div><strong>Nebius Games</strong> (online) — Diseño gráfico y arte conceptual 2D para proyecto independiente de videojuegos.</div>
+          </li>
+          <li class="item">
+            <div class="when">2020</div>
+            <div><strong>TamerinTECH</strong> (Múnich, Alemania) — Diseño de la interfaz de la app (UI) y materiales publicitarios.</div>
+          </li>
+          <li class="item">
+            <div class="when">2017–2022</div>
+            <div><strong>BSDanza / Jugger Compostela / Ocionautas</strong> — Diseño publicitario e identidad visual para eventos y asociaciones.</div>
           </li>
         </ul>
       </section>
     </aside>
   </div>
 
-  <p class="tiny">Referencias y portfolio completo disponibles a solicitud.</p>
+  <p class="tiny"></p>
 </div>
 </body>
 </html>
