Ajustes finales en layout y espaciado

--- a/CV-DAW-FCT.html
+++ b/CV-DAW-FCT.html
@@ -20,7 +20,7 @@
     <p class="tiny tiny-spacing">Disponibilidad inmediata · Presencial/Híbrido/Remoto</p>
     <p class="tiny"><i class="material-icons tiny-icon">location_on</i>Santiago de Compostela, Galicia</p>
     <br>
-    <p class="role right-align"><strong>— Busco prácticas FCT</strong></p>
+    <p class="role right-align"><strong>— Busco prácticas FCT&nbsp;</strong></p>
   </div>
 
   
